--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class="navbar navbar-fixed-top">
+	<div class="navbar-inner">
+		<div class="container-fluid">
+ 	<a href="#" class="brand">Treebook</a>
+ 	<ul class="nav">
+ 	<li><%= link_to "All Statuses", statuses_path %></li>
+ 	</ul>
+ 	</div>
+</div>
+</div>
+<div class= "container-fluid">
 <%= yield %>
+</div>
 
 </body>
 </html>
