--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,25 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+<% flash.each do |type,message| %>
+
+<div class="alert <%= flash_class type %>">
+	<button class="close" data-dismiss="alert">x</button>
+	<%= message %>
+</div>
+
+<% end %>
+
 <div class="navbar navbar-fixed-top">
+	
 	<div class="navbar-inner">
+	
 		<div class="container-fluid">
+ 	
  	<a href="#" class="brand">Treebook</a>
+ 	
  	<ul class="nav">
+ 	
  	<li><%= link_to "All Statuses", statuses_path %></li>
  	</ul>
  	<ul class="nav pull-right">
