--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,31 +15,34 @@
 </div>
 
 <% end %>
-
-<div class="navbar navbar-fixed-top">
-	
+<header class="navbar navbar-fixed-top navbar-inverse">
 	<div class="navbar-inner">
-	
-		<div class="container-fluid">
- 	
- 	<a href="#" class="brand">Treebook</a>
- 	
- 	<ul class="nav">
- 	
- 	<li><%= link_to "All Statuses", statuses_path %></li>
+ 	<div class="container">
+ 	<%= link_to "SnapShop", '#' , id: "logo" %>
+ 	<nav>
+ 	<ul class="nav navbar-nav">
+ 	<li><a href="#">Ahoy</a> </li>
+ 	<li><a href="#">What</a> </li>
+ 	<li><a href="#">Hey </a> </li>
+ 	<li><a href="#">ho  </a> </li>
  	</ul>
- 	<ul class="nav pull-right">
+ 	</nav>
  	<% if user_signed_in?%>
- 		<li><%= link_to current_user.full_name, edit_user_registration_path %></li>
- 		<li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
- 		<%else%>
- 		<li><%= link_to "Register", register_path %></li>
- 		<li><%= link_to "Log In", login_path%></li>
+ 	<ul class="nav navbar-nav pull-right"></ul>
+ 	<li><%= link_to current_user.full_name, edit_user_registration_path %></li>
+ 	 <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+ 	 </ul>
+ 	 <%else%>
+ 	 <ul class="nav navbar-nav pull-right" >
+ 	 <li><%= link_to "Register", register_path %></li>
+ 	 <li><%= link_to "Log In", login_path%></li>
+	</ul> 	
  	<%end%>
- 	</ul>
+ 	
+ 	
  	</div>
-</div>
-</div>
+ 	</div>
+ 	</header>
 <div class= "container-fluid">
 <%= yield %>
 </div>
