--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,13 +1,16 @@
-<%= simple_form_for(@product) do |f| %>
+<%= simple_form_for(@product, html: {class: "form-horizontal"}) do |f| %>
+
   <%= f.error_notification %>
 
   <div class="form-inputs">
+  	<%= f.input :user_id, collection: User.all, label_method: :full_name %>
     <%= f.input :title %>
     <%= f.input :description, as: :text %>
     <%= f.input :price %>
   </div>
-
+</br>
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
+
 <% end %>
