--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,29 @@
 	<div class="navbar-inner">
  	<div class="container">
  	<%= link_to "SnapShop", '#' , id: "logo" %>
+ 	
  	<% if user_signed_in?%>
- 	<ul class="nav navbar-nav pull-right"></ul>
- 	<li><%= link_to current_user.full_name, edit_user_registration_path %></li>
- 	 <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
- 	 </ul>
+
+
+	<div class="dropdown pull-right">
+
+		<button type ="button" class="btn btn-primary"><%= link_to current_user.full_name, "#" %></button>
+
+		<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+			<span class ="caret"></span>
+			<span class="sr-only"> Toggle Dropdown</span>
+		</button>
+
+		</button>
+
+ 		<ul class="dropdown-menu" role="menu">
+ 			<li><%= link_to "Settings", edit_user_registration_path %></li>
+ 			<li class="divider"></li>
+ 	 		<li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+ 		</ul>
+
+
+
  	 <%else%>
  	 <ul class="nav navbar-nav pull-right" >
  	 <li><%= link_to "Register", register_path %></li>
