--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,10 +2,12 @@
 
 html {
   overflow-y: scroll;
+  background: transparent
 }
 
 body {
   padding-top: 60px;
+  background-color: #f2f2f2;
 }
 
 section {
@@ -58,9 +60,8 @@ p {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: -1px;
+  color: #FFFFFF;
+  letter-spacing: 1px;
   padding-top: 9px;
   font-weight: bold;
   line-height: 1;
@@ -69,4 +70,20 @@ p {
 #logo:hover {
   color: #fff;
   text-decoration: none;
+}
+
+.navbar-inverse {
+  background-color: #1abc9c;
+  border-color: #16a085
+}
+
+.well {
+
+}
+
+.btn-nav{
+  color: #fff;
+  background-color: transparent;
+  border-color: white;
+
 }
