--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,8 +1,9 @@
-<%= simple_form_for(@product, html: {class: "form-horizontal"}) do |f| %>
+<%= simple_form_for @product, html:{:multipart => true} do |f| %>
 
   <%= f.error_notification %>
 
   <div class="form-inputs">
+  	<%= f.input :image, as: :file %>
     <%= f.input :title %>
     <%= f.input :description, as: :text %>
     <%= f.input :price %>
